--- a/조이-이지은/umc-kurly/main.html
+++ b/조이-이지은/umc-kurly/main.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>컬리 - 마켓컬리/뷰티컬리</title>
     <link rel="stylesheet" href="main.css" />
-    <title>My test page</title>
   </head>
   <body>
     <header class="header">
@@ -61,9 +61,39 @@
 
     <main class="main">
       <section class="main-1">
-        <img
-          src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/5b4e9985-9b15-4852-ae89-ffbed676c7c7.jpg"
-        />
+        <div id="slideShow">
+          <ul class="slides">
+            <li>
+              <img
+                src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/5b4e9985-9b15-4852-ae89-ffbed676c7c7.jpg"
+              />
+            </li>
+            <li>
+              <img
+                src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/f70905f4-7ef0-4b52-98a3-204c85a3d1ca.png"
+              />
+            </li>
+            <li>
+              <img
+                src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/6dcb9a88-452e-4545-a452-0b9855112f7f.jpg"
+              />
+            </li>
+            <li>
+              <img
+                src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/cbd9a5cc-a0f8-4bd7-ba85-92ede8fc82c9.jpg"
+              />
+            </li>
+            <li>
+              <img
+                src="https://product-image.kurly.com/cdn-cgi/image/quality=85/banner/main/pc/img/f70905f4-7ef0-4b52-98a3-204c85a3d1ca.png"
+              />
+            </li>
+          </ul>
+        </div>
+        <p class="controller">
+          <span class="prev">&lang;</span>
+          <span class="next">&rang;</span>
+        </p>
       </section>
 
       <section class="main-2">
@@ -112,5 +142,6 @@
         />
       </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
