--- a/민트-박지수/vscode.html
+++ b/민트-박지수/vscode.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="./vscode.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
     <title>VSCode</title>
   </head>
   <body>
@@ -72,9 +69,7 @@
           </div>
         </div>
         <div id="explorer-view--body">
-          <div
-            class="explorer-view--file-item explorer-view--item-select_indirect"
-          >
+          <div class="explorer-view--file-item explorer-view--item-select_indirect">
             <img src="./icon/python.png" />
             <div>fuck.py</div>
           </div>
